--- a/templates/config.json
+++ b/templates/config.json
@@ -11,7 +11,7 @@
     "blog_name": "Blogging@home",
     "tag_line": "Bloggs of the world",
     "email_userId": "shubham.eaton@gmail.com",
-    "email_password": "Eaton@123",
+    "email_password": "Removed",
     "about_text": "from config - about text",
     "no_of_post": 2,
     "login_img": "admin-img.png",
