--- a/templates/config.json
+++ b/templates/config.json
@@ -17,7 +17,7 @@
     "login_img": "admin-img.png",
     "admin_user": "shubham",
     "admin_pwd": "admin",
-    "upload_location": "C:\\Users\\E0559137\\PycharmProjects\\Flask_tut\\static\\filesfromUploader"
+    "upload_location": "Removed\\filesfromUploader"
   }
 
 }
